[project]
name = "my-astro-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "astropy>=7.2.0",
    "fastapi>=0.129.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "python-multipart>=0.0.22",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "timezonefinder>=8.2.1",
    "uvicorn>=0.41.0",
]
